[package]
name = "offsetting-x360"
version = "0.0.0-git"
edition = "2021"

[dependencies]
x-flipper-360 = { git = "https://github.com/offsetting/x-flipper-360" }
soiboy = { git = "https://github.com/offsetting/soiboy" }
clap = { version = "4.1", features = ["derive"] }
indicatif = "0.17"
colored = "2.0"
anyhow = "1.0"
