[package]
name = "x-flipper-360"
version = "0.0.0-git"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
dds = { git = "https://github.com/offsetting/dds", default-features = false }
modular-bitfield = { version = "0.11", default-features = false }
binrw = { version = "0.13", default-features = false }
